<?xml version="1.0"?>
<package format="2">
  <name>soccer_master</name>
  <version>0.0.0</version>
  <description>The soccer_master package</description>

  <author email="pedrodeniz11@gmail.com">Pedro Deniz</author>
  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/soccer_master</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <depend>movement_pkg</depend>
  <depend>vision_pkg</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
